--- a/index.html
+++ b/index.html
@@ -2051,4 +2051,22 @@
 
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js"></script>
+
+<script src="firebase-init.js"></script> 
+
+<script>
+   import { initializeApp } from 'firebase/app';
+
+// TODO: Replace the following with your app's Firebase configuration
+const firebaseConfig = {
+  //...
+};
+
+const app = initializeApp(firebaseConfig);
+</script>
+    
 </html>
+
