--- a/index.html
+++ b/index.html
@@ -811,12 +811,12 @@
             <form id="loginForm">
                 <div class="form-group">
                     <label class="form-label">Email</label>
-                    <input type="email" class="form-control" id="loginEmail" required placeholder="admin@buku.com / user@buku.com">
+                    <input type="email" class="form-control" id="loginEmail" required placeholder=>
                 </div>
 
                 <div class="form-group">
                     <label class="form-label">Password</label>
-                    <input type="password" class="form-control" id="loginPassword" required placeholder="admin123 / user123">
+                    <input type="password" class="form-control" id="loginPassword" required placeholder=>
                 </div>
 
                 <button type="submit" class="btn btn-primary" style="width: 100%; margin-bottom: 1rem;">
@@ -2048,5 +2048,6 @@
     </script>
 </body>   
 </html>
+
 
 
